--- a/ShoppingMall/app/src/main/AndroidManifest.xml
+++ b/ShoppingMall/app/src/main/AndroidManifest.xml
@@ -3,7 +3,24 @@
           package="com.minze.shoppingmall.shoppingmall">
 
     <!--需要的权限  start-->
-
+    <!-- 这个权限用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+    <!-- 这个权限用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <!-- 用于读取手机当前的状态-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <!-- 访问网络，网络定位需要上网-->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
     <!--需要的权限  end-->
 
     <application
@@ -13,9 +30,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GuideActivity"
-            android:screenOrientation="portrait"
+        <activity
+            android:name=".GuideActivity"
             android:configChanges="orientation|keyboard"
+            android:screenOrientation="portrait"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,6 +45,9 @@
         <!--所有的activity  start-->
         <activity android:name=".MainActivity"/><!--主页Activity-->
         <activity android:name=".activity.LoginActivity"/><!--登陆页面Activity-->
+        <activity android:name=".activity.RegisterActivity"/><!--注册页面Activity-->
+        <activity android:name=".activity.DetailsActivity"/><!--订单详情页Activity-->
+        <activity android:name=".activity.ForgetPasswordActivity"/><!--忘记密码页Activity-->
         <!--所有的activity  end-->
 
     </application>
